--- a/ldregistry/config/app.conf
+++ b/ldregistry/config/app.conf
@@ -5,6 +5,7 @@ basestore            = com.epimorphics.registry.store.impl.TDBStore
 basestore.location   = /var/opt/ldregistry/store
 basestore.ep         = system
 basestore.textIndex  = rdfs:label,dct:title,foaf:name,skos:prefLabel,skos:altLabel
+basestore.index      = /var/opt/ldregistry/index
 
 # The Registry store API wrapper, which uses the base RDF store and indexer
 storeapi             = com.epimorphics.registry.store.StoreBaseImpl
